--- a/index.html
+++ b/index.html
@@ -5,10 +5,56 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/style.css">
+    <title>Parrot Card Game</title>
 </head>
 <body>
-    <h1>Teste do Teste</h1>
+    <header class="header">
+        <h1>parrot card</h1>
+        <h1>game</h1>
+    </header>
+
+    <main class="cards">
+        <div class="card">
+            <img class="parrot" src="media/front.png">
+        </div>
+        <div class="card">
+            <img class="parrot" src="media/front.png">
+        </div>
+        <div class="card">
+            <img class="parrot" src="media/front.png">
+        </div>
+        <div class="card">
+            <img class="parrot" src="media/front.png">
+        </div>
+        <div class="card">
+            <img class="parrot" src="media/front.png">
+        </div>
+        <div class="card">
+            <img class="parrot" src="media/front.png">
+        </div>
+        <div class="card">
+            <img class="parrot" src="media/front.png">
+        </div>
+        <div class="card">
+            <img class="parrot" src="media/front.png">
+        </div>
+        <div class="card">
+            <img class="parrot" src="media/front.png">
+        </div>
+        <div class="card">
+            <img class="parrot" src="media/front.png">
+        </div>
+        <div class="card">
+            <img class="parrot" src="media/front.png">
+        </div>
+        <div class="card">
+            <img class="parrot" src="media/front.png">
+        </div>
+    </main>
 
     <script src="script.js"></script>
 </body>
