--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <title>Parrot Card Game</title>
 </head>
 <body>
+    <div class="timer"></div>
     <header class="header">
         <h1>parrot card</h1>
         <h1>game</h1>
