--- a/index.html
+++ b/index.html
@@ -1,27 +1,25 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-<head>
-    <link rel="stylesheet" href="css/reset.css">
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css">
+  <head>
+    <link rel="stylesheet" href="css/reset.css" />
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap" rel="stylesheet"/>
+    <link rel="stylesheet" href="css/style.css" />
     <title>Parrot Card Game</title>
-</head>
-<body>
+  </head>
+  <body>
     <div class="timer"></div>
     <header class="header">
-        <h1>parrot card</h1>
-        <h1>game</h1>
+      <h1>parrot card</h1>
+      <h1>game</h1>
     </header>
 
-    <main class="cards">
-    
-    </main>
+    <main class="cards"></main>
 
     <script src="script.js"></script>
-</body>
+  </body>
 </html>
